# job-search-cli

./: .env.example  .gitignore  NEXT_SPRINT.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
codepractice/: __init__.py  __main__.py  config.py  main.py
codepractice/core/: difficulty.py  models.py  problem_bank.py  spaced_repetition.py
codepractice/db/: __init__.py  database.py  export.py
codepractice/db/migrations/: 001_initial.sql  002_learning_plans.sql  003_chat_history.sql  004_spaced_repetition.sql  005_personal_notes.sql  006_difficulty_rating.sql  007_question_drafts.sql
codepractice/db/repositories/: __init__.py  base.py  chat_history.py  learning_plans.py  problems.py  profile.py  question_drafts.py  sessions.py
codepractice/llm/: client.py
codepractice/llm/prompts/: base.py  chat.py  evaluator.py  plan_gen.py  problem_gen.py
codepractice/llm/services/: answer_evaluator.py  chat_service.py  plan_manager.py  problem_generator.py
codepractice/tui/: app.py  theme.tcss
codepractice/utils/: code_runner.py  text_utils.py
data/problems/: dsa_easy.json  dsa_hard.json  dsa_medium.json  python_fundamentals.json
tests/: conftest.py  test_chat_service.py  test_cli.py  test_code_runner.py  test_diff_view.py  test_difficulty.py  test_difficulty_rating.py  test_digest.py  test_extra_repositories.py  test_freeform_questions.py  test_llm_client.py  test_llm_services.py  test_markdown_export.py  test_models.py  test_personal_notes.py  test_prefetch.py  test_problem_bank.py  test_problem_generator.py  test_prompts.py  test_repositories.py  test_session_replay.py  test_spaced_repetition.py  test_text_utils.py  test_weak_area_drill.py
(+17 files in other folders)
